Ensuring enough Java runtime memory is allocated to prevent OutOfMemory and PermGenSpace Errors
git-svn-id: http://svn.apache.org/repos/asf/portals/jetspeed-2/portal/trunk@931744 13f79535-47bb-0310-9956-ffa450edef68